external-crates/move/crates/move-compiler/tests/move_2024/typing/dot_call_private_field.exp
error[E04001]: restricted visibility
   ┌─ tests/move_2024/typing/dot_call_private_field.move:13:5
   │
13 │     y.x.f()
   │     ^^^ Invalid access of field 'x' on '0x42::t::Y'. Fields can only be accessed inside the struct's module

